feat: 대시보드 DB 저장 구현
